--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <button class="button_shop button--primary">Shop now</button>
     </div>
 </section>
-<section class="block container section_obuv">
+<section class="container section_obuv">
+    <div class="container block vse">
     <div class="watch">
         <h1 class="h1_watch">Fashion Month Ready in Capital Shop</h1>
-        <p class="p_watch">Bags & Acsessories & Lingerie & Sportswear &
-            Beauty & Swimwear</p>
+        <p class="p_watch">Bags & Acsessories & Lingerie & Sportswear & Beauty & Swimwear</p>
         <button class="button_watch button--primary">View all</button>
     </div>
     <div class="obuv">
@@ -55,7 +55,47 @@
             <p class="p_obuv">Sweaters & Hoodies & Puffer Jackets & Coats and Jackets & Knit</p>
             <button class="button_watch button--primary">View all</button>
     </div>
+<div class="man">
+    <div class="man1">
+        <button class="best best--primary">Bestseller</button>
+        <h1 class="h1_man">
+            Poplin Top <br>With Sleeve Bow
+        </h1>
+        <p1 class="p_man">
+            Poplin top with roll neckline, long sleeves
+        </p1>
+        <button class="button_man button--primary">Shop now</button>
+    </div>
+    <div class="women">
+        <div class="women1">
+</div>
+        <div class="women2">
+
+</div>
+        <div class="women3">
+</div>
+    </div>
+</div>
+    
+    <div class="woman">
+        <h1 class="h1_woman">Printed Shirt<br> with a Bow</h1>
+        <p class="p_woman">Pink/Sky Blue/Yellow</p>
+        <span class="woman_price">$129</span>
+    </div>
+</div>
 </section>
-<!-- /.block container -->
+<!-- /.block container section_genders -->
+<section class="container clothes">
+    <div class="arrival">
+        <h3 class="h3_arrival">New Arrival</h3>
+        <span class="view_span">View All</span>
+    </div>
+    <div class="cloths_block block">
+        <div class="hudie">
+            
+        </div>
+    </div>
+</section>
+<!-- /.container clothes -->
 </body>
 </html>
