--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 </section>
 <section class="container section_obuv">
-    <div class="container block vse">
+    <div class="block vse">
     <div class="watch">
         <h1 class="h1_watch">Fashion Month Ready in Capital Shop</h1>
         <p class="p_watch">Bags & Acsessories & Lingerie & Sportswear & Beauty & Swimwear</p>
@@ -61,9 +61,9 @@
         <h1 class="h1_man">
             Poplin Top <br>With Sleeve Bow
         </h1>
-        <p1 class="p_man">
+        <p class="p_man">
             Poplin top with roll neckline, long sleeves
-        </p1>
+        </p>
         <button class="button_man button--primary">Shop now</button>
     </div>
     <div class="women">
@@ -82,10 +82,12 @@
         <p class="p_woman">Pink/Sky Blue/Yellow</p>
         <span class="woman_price">$129</span>
     </div>
+
 </div>
 </section>
 <!-- /.block container section_genders -->
 <section class="container clothes">
+    <div class="container_block">
     <div class="arrival container_ou">
         <h3 class="h3_arrival">New Arrival</h3>
         <span class="view_span">View All</span>
@@ -116,9 +118,46 @@
             <p class="p_clothes">Yellow/Lilac/Fuchsia/Orange</p>
             <span class="price1">$89</span>
         </div>
-    
+    </div>
 </div>
 </section>
 <!-- /.container clothes -->
+
+<footer class="footer_block container">
+    <div class="footer_block container_block">
+        <div class="block">
+            <div class="block footer_nav">
+                <a href="#" class="nav_f">Shop</a>
+                <a href="#" class="nav_f">About Us</a>
+                <a href="#" class="nav_f">Careers</a>
+                <a href="#" class="nav_f">FAQ</a>
+                <a href="#" class="nav_f">Blog</a>
+                <a href="#" class="nav_f">Contacts</a>
+            </div>
+            <div class="block socials_block">
+                <a href="#" class="a_footer">Follow Us</a>
+                <div class="socials block">
+                    <img src="img/Facebook.png" alt="" class="img_footer">
+                    <img src="img/Twitter.png" alt="" class="img_footer">
+                    <img src="img/Instagram.png" alt="" class="img_footer">
+                </div>
+            </div>
+            <a href="#" class="a_footer">© 2021 Universal UI Kit</a>
+        </div>
+        <div class="line"></div>
+        <div class="block bottom_footer">
+            <div class="pay block">
+                <img src="img/Logo.png" alt="" class="img_pay">
+                <img src="img/Logo).png" alt="" class="img_pay">
+                <img src="img/Logo2.png" alt="" class="img_pay">
+                <img src="img/Logo3.png" alt="" class="img_pay">
+            </div>
+            <div class="top block">
+                <a href="#" class="nav_f">Top</a>
+                <a href="#" class="a_top"><img src="img/Backgroung1.png" alt="" class="img_top"></a>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
