--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="section_header">
-        <div class="container block block_header">
+    <header>
+        <div class="container block_header">
+        <div class="container_osn block">
             <a href="#" class="logo">
                 <img src="img/logo.svg" alt="logo" class="logo_img">
             </a>
@@ -34,17 +35,21 @@
             <button class="button_cart button_cart_img button--primary">Cart</button>
          </div>
         </div>
+    </div>
     </header>
-<section class="container section_sweater block_sweater">
+<section class="section_sweater">
+    <div class="container bonus">
     <div class="sweater">
         <span class="best best--primary">Bestseller</span>
         <h1 class="section__title title_sweater"> Sweater <br> Choker Neck</h1>
         <p class="section__text">Women’s pearl basic knit sweater with a round neck. Available in several colours. Free shipping to stores.</p>
         <button class="button_shop button--primary">Shop now</button>
     </div>
+</div>
 </section>
-<section class="container section_obuv">
-    <div class="block vse">
+<section>
+    <div class="container block_obuv">
+    <div class="container_osn block vse">
     <div class="watch">
         <h1 class="h1_watch">Fashion Month Ready in Capital Shop</h1>
         <p class="p_watch">Bags & Acsessories & Lingerie & Sportswear & Beauty & Swimwear</p>
@@ -84,9 +89,11 @@
     </div>
 
 </div>
+</div>
 </section>
 <!-- /.block container section_genders -->
-<section class="container clothes">
+<section>
+    <div class="container clothes">
     <div class="container_block">
     <div class="arrival container_ou">
         <h3 class="h3_arrival">New Arrival</h3>
@@ -100,31 +107,33 @@
             <p class="p_clothes">Yellow/Lilac/Fuchsia/Orange</p>
             <span class="price1">$89</span>
         </div>  
-        <div class="hudie">
+        <div class="fade">
             <span class="best best--primary bb">New</span>
-            <h3 class="h3_clothes">Embroidered Hoodie</h3>
-            <p class="p_clothes">Yellow/Lilac/Fuchsia/Orange</p>
-            <span class="price1">$89</span>
+            <h3 class="h3_clothes">Faded Beach Trousers</h3>
+            <p class="p_clothes">Navy/Ochre/Black/Khaki</p>
+            <span class="price1">$139</span>
         </div>
-        <div class="hudie">
+        <div class="text">
             <span class="best best--primary bb">New</span>
-            <h3 class="h3_clothes">Embroidered Hoodie</h3>
-            <p class="p_clothes">Yellow/Lilac/Fuchsia/Orange</p>
-            <span class="price1">$89</span>
+            <h3 class="h3_clothes">Text T-Shirt</h3>
+            <p class="p_clothes">White</p>
+            <span class="price1">$59</span>
         </div>
-        <div class="hudie">
+        <div class="long">
             <span class="best best--primary bb">New</span>
-            <h3 class="h3_clothes">Embroidered Hoodie</h3>
-            <p class="p_clothes">Yellow/Lilac/Fuchsia/Orange</p>
-            <span class="price1">$89</span>
+            <h3 class="h3_clothes">Striped Long Sleeve Shirt</h3>
+            <p class="p_clothes">Red/Sky Blue</p>
+            <span class="price1">$119</span>
         </div>
     </div>
+</div>
 </div>
 </section>
 <!-- /.container clothes -->
 
-<footer class="footer_block container">
-    <div class="footer_block container_block">
+<footer>
+    <div class="container footer_block">
+    <div class="container_block">
         <div class="block">
             <div class="block footer_nav">
                 <a href="#" class="nav_f">Shop</a>
@@ -158,6 +167,7 @@
             </div>
         </div>
     </div>
+</div>
 </footer>
 </body>
 </html>
