--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 <section class="section_sweater">
     <div class="container bonus">
     <div class="sweater">
+        
         <span class="best best--primary">Bestseller</span>
         <h1 class="section__title title_sweater"> Sweater <br> Choker Neck</h1>
         <p class="section__text">Women’s pearl basic knit sweater with a round neck. Available in several colours. Free shipping to stores.</p>
         <button class="button_shop button--primary">Shop now</button>
+    
     </div>
 </div>
 </section>
@@ -143,7 +145,8 @@
                 <a href="#" class="nav_f">Blog</a>
                 <a href="#" class="nav_f">Contacts</a>
             </div>
-            <div class="block socials_block">
+            <div class="socials_block block">
+            <div class="block social_block">
                 <a href="#" class="a_footer">Follow Us</a>
                 <div class="socials block">
                     <img src="img/Facebook.png" alt="" class="img_footer">
@@ -152,6 +155,7 @@
                 </div>
             </div>
             <a href="#" class="a_footer">© 2021 Universal UI Kit</a>
+        </div>
         </div>
         <div class="line"></div>
         <div class="block bottom_footer">
